# Spaceship-Game

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
data/configs/: config.json
data/models/: laser_beam.obj.bak
data/shaders/: fragmentShader.frag  shader.frag  vertexShader.vert
src/: CMakeLists.txt  data_types.h  game.cc  game.h  main.cc  utils.cc  utils.h
src/engine/: data_types.h  engine.cc  engine.h  utils.cc  utils.h
